# pocket-deployment

./: pocket-example.yaml  pyproject.toml
docs/: deployment-list.md  readme.md
tpd/: conf_tools.py  default-deployment.yaml  env_tool.py  git.py  log.py  run.py  startapp.py
